<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Text.White"
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/rounded_bg"
            android:gravity="center_horizontal"
            android:paddingTop="80dp"
            android:text="@string/title"
            android:textSize="@dimen/h1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_programming"
        android:gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/img_person"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_person"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="260dp"
        app:layout_constraintBottom_toBottomOf="@id/txt_title"/>

    <TextView
        style="@style/Text"
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:lineSpacingMultiplier="0.9"
        android:textSize="@dimen/h2"
        app:layout_constraintTop_toBottomOf="@id/img_person"/>

    <TextView
        android:id="@+id/txt_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/h3"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintBottom_toTopOf="@id/details"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:background="@drawable/card_bg"
        app:layout_constraintTop_toBottomOf="@id/txt_details"
        app:layout_constraintBottom_toTopOf="@+id/btn">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <ImageView
                android:id="@+id/date_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_date_range_black_24dp"
                android:contentDescription="@string/date_icon" />
            <TextView
                android:id="@+id/txt_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:fontFamily="@font/poppins"
                android:layout_toEndOf="@+id/date_icon"
                android:layout_marginStart="16dp"/>

            <TextView
                style="@style/Text.Details"
                android:id="@+id/txt_date"
                android:text="@string/date"
                android:layout_toEndOf="@+id/date_icon"
                android:layout_below="@id/txt_date_of_birth"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_phone_black_24dp"
                android:contentDescription="@string/phone_icon" />
            <TextView
                android:id="@+id/txt_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:fontFamily="@font/poppins"
                android:layout_toEndOf="@+id/phone_icon"
                android:layout_marginStart="16dp"/>

            <TextView
                style="@style/Text.Details"
                android:id="@+id/txt_number"
                android:text="@string/number"
                android:layout_toEndOf="@+id/phone_icon"
                android:layout_below="@id/txt_phone_number"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">
            <ImageView
                android:id="@+id/loc_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_location_on_black_24dp"
                android:contentDescription="@string/address_icon" />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_"
                android:fontFamily="@font/poppins"
                android:layout_toEndOf="@+id/loc_icon"
                android:layout_marginStart="16dp"/>
            <TextView
                style="@style/Text.Details"
                android:id="@+id/txt_address"
                android:text="@string/address"
                android:layout_toEndOf="@+id/loc_icon"
                android:layout_below="@id/address"/>
        </RelativeLayout>
    </LinearLayout>
    <Button
        style="@style/CustomButton"
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/github"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/details"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>